Fix mistyping of BaseRelationshipMeta
